# eurostat-downloader

./: Cargo.toml  Dockerfile  sample.tsv
.github/workflows/: build.yaml
src/: cli.rs  downloader.rs  error.rs  main.rs  parser.rs  types.rs
