[package]
name = "tsv-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tracing = "0.1"
csv = "1.2"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
futures = "0.3"
indicatif = "0.17"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["io", "time"] }
futures-util = "0.3"
